# network-simple

./: README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
src/network_simple/: __init__.py  client.py  server.py
test/: conftest.py  test_server.py
